--- a/charan.com/index.html
+++ b/charan.com/index.html
@@ -105,10 +105,29 @@
             </div>
             <div class="footer-third"></div>
             <div class="footer-fourth">
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-linkedin"></i>
-                <i class="fa-brands fa-github"></i>
-                <i class="fa-solid fa-x"></i>
+                <div class="footer-fourth">
+                <h3>follow me !</h3>
+                <div>
+                    <a href="https://www.instagram.com/sai_charan_km/" target="_blank" rel="noopener noreferrer">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                </div>
+                <div>
+                    <a href="https://www.linkedin.com/in/sai-charan-019aba278/" target="_blank" rel="noopener noreferrer">
+                        <i class="fa-brands fa-linkedin"></i>
+                    </a>
+                </div>
+                <div>
+                    <a href="https://github.com/SaicharanKM" target="_blank" rel="noopener noreferrer">
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                </div>
+                <div>
+                    <a href="https://twitter.com/sai_charan_km" target="_blank" rel="noopener noreferrer">
+                        <i class="fa-solid fa-x"></i>
+                    </a>
+                </div>
+            </div>
             </div>
         </div>
         <div class="footer-rights"> copyrights &#169; www.cheransportfolio.com | All rights reserved</div>
